--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>Stateds</H1>
+        <H1>States</H1>
         <UL>
             {% for state in states|sort(attribute='name') %}
             <LI>{{ states[state].id }}: <B>{{ states[state].name }}</B>
